# Mino-Allocator

./: CMakeLists.txt
includes/: Allocator.h  types.h
sources/: Allocator.c  AllocatorInternals.h  main.c
sources/posix/: Allocator.c
sources/windows/: Allocator.c
